Migrated from poetry to uv

--- a/notebooks/illustrated_example.ipynb
+++ b/notebooks/illustrated_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data from /Users/sakre/Data/myData/July262024/apple_health_export/health_export_2024.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -56,6 +63,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>user_id</th>\n",
        "      <th>device.name</th>\n",
        "      <th>type</th>\n",
@@ -68,7 +76,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>580</th>\n",
+       "      <th>0</th>\n",
+       "      <td>580</td>\n",
        "      <td>anon</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DietaryWater</td>\n",
@@ -79,7 +88,8 @@
        "      <td>America/Los_Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>581</th>\n",
+       "      <th>1</th>\n",
+       "      <td>581</td>\n",
        "      <td>anon</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DietaryWater</td>\n",
@@ -90,7 +100,8 @@
        "      <td>America/Los_Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>582</th>\n",
+       "      <th>2</th>\n",
+       "      <td>582</td>\n",
        "      <td>anon</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DietaryWater</td>\n",
@@ -101,7 +112,8 @@
        "      <td>America/Los_Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>583</th>\n",
+       "      <th>3</th>\n",
+       "      <td>583</td>\n",
        "      <td>anon</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DietaryWater</td>\n",
@@ -112,7 +124,8 @@
        "      <td>America/Los_Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>584</th>\n",
+       "      <th>4</th>\n",
+       "      <td>584</td>\n",
        "      <td>anon</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DietaryWater</td>\n",
@@ -132,9 +145,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5358274</th>\n",
+       "      <th>632900</th>\n",
+       "      <td>5358274</td>\n",
        "      <td>anon</td>\n",
        "      <td>Apple Watch</td>\n",
        "      <td>HeartRateVariabilitySDNN</td>\n",
@@ -145,7 +160,8 @@
        "      <td>America/Los_Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5358275</th>\n",
+       "      <th>632901</th>\n",
+       "      <td>5358275</td>\n",
        "      <td>anon</td>\n",
        "      <td>Apple Watch</td>\n",
        "      <td>HeartRateVariabilitySDNN</td>\n",
@@ -156,7 +172,8 @@
        "      <td>America/Los_Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5358276</th>\n",
+       "      <th>632902</th>\n",
+       "      <td>5358276</td>\n",
        "      <td>anon</td>\n",
        "      <td>Apple Watch</td>\n",
        "      <td>HeartRateVariabilitySDNN</td>\n",
@@ -167,7 +184,8 @@
        "      <td>America/Los_Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5358277</th>\n",
+       "      <th>632903</th>\n",
+       "      <td>5358277</td>\n",
        "      <td>anon</td>\n",
        "      <td>Apple Watch</td>\n",
        "      <td>HeartRateVariabilitySDNN</td>\n",
@@ -178,7 +196,8 @@
        "      <td>America/Los_Angeles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5358278</th>\n",
+       "      <th>632904</th>\n",
+       "      <td>5358278</td>\n",
        "      <td>anon</td>\n",
        "      <td>Apple Watch</td>\n",
        "      <td>HeartRateVariabilitySDNN</td>\n",
@@ -190,53 +209,53 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>632905 rows × 8 columns</p>\n",
+       "<p>632905 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        user_id  device.name                      type         local_start  \\\n",
-       "580        anon          NaN              DietaryWater 2024-01-03 17:27:41   \n",
-       "581        anon          NaN              DietaryWater 2024-01-04 18:55:16   \n",
-       "582        anon          NaN              DietaryWater 2024-01-04 18:55:59   \n",
-       "583        anon          NaN              DietaryWater 2024-01-05 12:00:00   \n",
-       "584        anon          NaN              DietaryWater 2024-01-05 18:00:00   \n",
-       "...         ...          ...                       ...                 ...   \n",
-       "5358274    anon  Apple Watch  HeartRateVariabilitySDNN 2024-07-26 00:11:20   \n",
-       "5358275    anon  Apple Watch  HeartRateVariabilitySDNN 2024-07-26 02:11:22   \n",
-       "5358276    anon  Apple Watch  HeartRateVariabilitySDNN 2024-07-26 04:11:25   \n",
-       "5358277    anon  Apple Watch  HeartRateVariabilitySDNN 2024-07-26 07:14:20   \n",
-       "5358278    anon  Apple Watch  HeartRateVariabilitySDNN 2024-07-26 08:59:14   \n",
+       "        Unnamed: 0 user_id  device.name                      type  \\\n",
+       "0              580    anon          NaN              DietaryWater   \n",
+       "1              581    anon          NaN              DietaryWater   \n",
+       "2              582    anon          NaN              DietaryWater   \n",
+       "3              583    anon          NaN              DietaryWater   \n",
+       "4              584    anon          NaN              DietaryWater   \n",
+       "...            ...     ...          ...                       ...   \n",
+       "632900     5358274    anon  Apple Watch  HeartRateVariabilitySDNN   \n",
+       "632901     5358275    anon  Apple Watch  HeartRateVariabilitySDNN   \n",
+       "632902     5358276    anon  Apple Watch  HeartRateVariabilitySDNN   \n",
+       "632903     5358277    anon  Apple Watch  HeartRateVariabilitySDNN   \n",
+       "632904     5358278    anon  Apple Watch  HeartRateVariabilitySDNN   \n",
        "\n",
-       "                  local_end       value  body.quantity.count  \\\n",
-       "580     2024-01-03 17:27:41  0.00204375                    1   \n",
-       "581     2024-01-04 18:55:16     10.1791                    1   \n",
-       "582     2024-01-04 18:55:59    0.133333                    1   \n",
-       "583     2024-01-05 12:00:00    0.133333                    1   \n",
-       "584     2024-01-05 18:00:00    0.133333                    1   \n",
-       "...                     ...         ...                  ...   \n",
-       "5358274 2024-07-26 00:12:19      123.93                    1   \n",
-       "5358275 2024-07-26 02:12:22     205.665                    1   \n",
-       "5358276 2024-07-26 04:12:24     89.9181                    1   \n",
-       "5358277 2024-07-26 07:15:17     67.1143                    1   \n",
-       "5358278 2024-07-26 09:00:13     73.9198                    1   \n",
+       "               local_start           local_end       value  \\\n",
+       "0      2024-01-03 17:27:41 2024-01-03 17:27:41  0.00204375   \n",
+       "1      2024-01-04 18:55:16 2024-01-04 18:55:16     10.1791   \n",
+       "2      2024-01-04 18:55:59 2024-01-04 18:55:59    0.133333   \n",
+       "3      2024-01-05 12:00:00 2024-01-05 12:00:00    0.133333   \n",
+       "4      2024-01-05 18:00:00 2024-01-05 18:00:00    0.133333   \n",
+       "...                    ...                 ...         ...   \n",
+       "632900 2024-07-26 00:11:20 2024-07-26 00:12:19      123.93   \n",
+       "632901 2024-07-26 02:11:22 2024-07-26 02:12:22     205.665   \n",
+       "632902 2024-07-26 04:11:25 2024-07-26 04:12:24     89.9181   \n",
+       "632903 2024-07-26 07:14:20 2024-07-26 07:15:17     67.1143   \n",
+       "632904 2024-07-26 08:59:14 2024-07-26 09:00:13     73.9198   \n",
        "\n",
-       "                    timezone  \n",
-       "580      America/Los_Angeles  \n",
-       "581      America/Los_Angeles  \n",
-       "582      America/Los_Angeles  \n",
-       "583      America/Los_Angeles  \n",
-       "584      America/Los_Angeles  \n",
-       "...                      ...  \n",
-       "5358274  America/Los_Angeles  \n",
-       "5358275  America/Los_Angeles  \n",
-       "5358276  America/Los_Angeles  \n",
-       "5358277  America/Los_Angeles  \n",
-       "5358278  America/Los_Angeles  \n",
+       "        body.quantity.count             timezone  \n",
+       "0                         1  America/Los_Angeles  \n",
+       "1                         1  America/Los_Angeles  \n",
+       "2                         1  America/Los_Angeles  \n",
+       "3                         1  America/Los_Angeles  \n",
+       "4                         1  America/Los_Angeles  \n",
+       "...                     ...                  ...  \n",
+       "632900                    1  America/Los_Angeles  \n",
+       "632901                    1  America/Los_Angeles  \n",
+       "632902                    1  America/Los_Angeles  \n",
+       "632903                    1  America/Los_Angeles  \n",
+       "632904                    1  America/Los_Angeles  \n",
        "\n",
-       "[632905 rows x 8 columns]"
+       "[632905 rows x 9 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +546,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +759,7 @@
        "6   2024-08-01      30D           12"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1092,7 @@
        "[7 rows x 201 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1417,7 @@
        "[7 rows x 203 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1676,7 @@
        "[159 rows x 12 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1716,7 @@
        "Text(0.5, 1.0, 'Pearson correlation with days traveling')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
